Thu Jun 25 19:12:44 MEST 1998  Matthias Ettrich <ettrich@kde.org>

	* Word wrap fixed

Fri Jan  9 18:04:16 MET 1998 Stefan Taferner <taferner@kde.org>

	* Added standard accelerator keys

Sat Dec  6 03:17:49 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* Finally implemented word wrap correctly. Should work fine now
	  under both auto-indent-mode and normal-mode. I expect the 	
	  implementation
	  to still have a little quirk here and there, but in general it should
	  work now. It was quite a bit of work for only a few lines of code.
	  Something is still amiss with the Qt mline widget -- it gave me lots
	  of problems and most of the implemntation turned out to be an ugly
	  trial and error procedure.

	* keditcl1.cpp: implemented control-k control-y emacs like kill buffer
	  threw out KEdit.cpp KEdit.h and introduced keditcl.h keditcl1.cpp
	  keditcl2.cpp

Fri Oct 24 01:19:54 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kedit.cpp: lots of clean ups and fixes that were necessary because
	  of Qt 1.31. I replaced at message and query dialogs with the new 
	  warning and information dialogs. 

Thu Sep 25 22:37:22 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* non-modal search and replace dialogs
	* centered about, search and replace dialogs
	* bug fixes

Sat Aug 30 23:27:51 1997  Teilnehmer 8  <wuebben@kray.dinet.de (Teilnehmer 8)>

	* added Klocale support

Mon Aug  4 19:23:59 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* Better about box with logo ( code from kreversi )

Sat Aug  2 22:55:53 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* KEdit.cpp: various fixes
	* kedit.cpp  fixed the 'malformed URL' bug that popped up
	  since KURL had changed its behaviour

Thu Jul 24 20:13:53 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* kedit.cpp: made kedit work with the new libs

Mon Jul 21 22:43:07 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>
