@@ -37,8 +37,10 @@ FillDlg::FillDlg(QWidget *parent, const char *name)
 				frame1, "fill");
     connect(fill_column, SIGNAL(toggled(bool)),this,SLOT(synchronize(bool)));
 
-    word_wrap = new QCheckBox(klocale->translate("Word Warp"), 
+    word_wrap = new QCheckBox(klocale->translate("Word Wrap"), 
 			      frame1, "word");
+    backup_copies = new QCheckBox(klocale->translate("Backup Copies"), 
+			      frame1, "backup");
     mailcmd = new QLineEdit(this,"mailcmd");
     mailcmdlabel = new QLabel(this,"mailcmdlable");
     mailcmdlabel->setText(klocale->translate("Mail Command:"));
@@ -47,7 +49,7 @@ FillDlg::FillDlg(QWidget *parent, const char *name)
     cancel->setFocus();
     connect(cancel, SIGNAL(clicked()), this, SLOT(reject()));
     connect(ok, SIGNAL(clicked()), this, SLOT(checkit()));
-    resize(300, 190);
+    resize(300, 225);
 }
 
 struct fill_struct  FillDlg::getFillCol() { 
@@ -56,6 +58,7 @@ struct fill_struct  FillDlg::getFillCol() {
 
   fillstr.word_wrap_is_set = word_wrap->isChecked();
   fillstr.fill_column_is_set = fill_column->isChecked();
+  fillstr.backup_copies_is_set = backup_copies->isChecked();
   fillstr.mailcmd = mailcmd->text();
   fillstr.mailcmd.detach();
   string = values->text();  
@@ -92,6 +95,7 @@ void FillDlg::setWidgets(struct fill_struct fill){
 
   fill_column->setChecked(fill.fill_column_is_set);
   word_wrap->setChecked(fill.word_wrap_is_set);
+  backup_copies->setChecked(fill.backup_copies_is_set);
   values->setText(string.setNum(fill.fill_column_value));
   mailcmd->setText(fill.mailcmd.data());
 
@@ -113,10 +117,11 @@ void FillDlg::resizeEvent(QResizeEvent *)
     cancel->setGeometry(width() - 80, height() - 30, 70, 25);
     ok->setGeometry(width() - 160, height() - 30, 70, 25);
     values->setGeometry(170, 35, 70, 25);
-    mailcmd->setGeometry(120, 105, 160, 25);
-    mailcmdlabel->setGeometry(25, 105, 90, 25);
+    mailcmd->setGeometry(120, 140, 160, 25);
+    mailcmdlabel->setGeometry(25, 140, 90, 25);
     fill_column->setGeometry(20, 30, 140, 25);
     word_wrap->setGeometry(20, 65, 140, 25);
+    backup_copies->setGeometry(20, 100, 140, 25);
 }
 
 void FillDlg::checkit(){
